fix deprecation on I18N