@@ -24,7 +24,7 @@ public final class I18n {
 	 * @param language A BCP47 language, e.g. "en", "fr".
 	 */
 	public static void setLanguage(final String language) {
-		messages = ResourceBundle.getBundle("MessagesBundle", new Locale(language));
+		messages = ResourceBundle.getBundle("MessagesBundle", Locale.of(language));
 	}
 
 	/**
